hive-macro/tests/macro/should_fail/function_argument_reference.stderr
error: Function arguments should be accessed by reference

         = help: All arguments in a Hive testfunction are accessed by reference and not by type.
         = note: example: fn my_fancy_test(test_channel: &mut dyn TestChannelHandle, probe: &mut Probe);

 --> tests/macro/should_fail/function_argument_reference.rs:2:32
  |
2 | fn test_function(test_channel: String, handle: String) {}
  |                                ^^^^^^
